<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/medium_dialog_height">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/expense"
        android:textAlignment="center"
        android:textSize="@dimen/headline5_text_size"
        app:layout_constraintBottom_toTopOf="@+id/account_cv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/account_cv"
        style="@style/LightCardView"
        android:layout_width="0dp"
        android:layout_height="@dimen/big_element_height"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_half_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_half_margin"
        android:theme="@style/LightCardView"
        app:layout_constraintBottom_toTopOf="@+id/transaction_amount_tv"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView">

        <include
            android:id="@+id/account_type"
            layout="@layout/category_cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/transaction_cv"
        style="@style/LightCardView"
        android:layout_width="0dp"
        android:layout_height="@dimen/big_element_height"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:theme="@style/LightCardView"
        app:layout_constraintBottom_toBottomOf="@+id/account_cv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/account_cv">

        <include
            android:id="@+id/transaction_category_type"
            layout="@layout/category_cardview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/transaction_amount_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_half_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/small_half_margin"
        android:hint="@string/zero_balance"
        android:inputType="numberDecimal"
        android:imeOptions="actionNext"
        android:textAlignment="center"
        android:nextFocusDown="@id/transaction_description"
        android:textSize="@dimen/headline5_text_size"
        app:layout_constraintBottom_toTopOf="@+id/transaction_description"
        app:layout_constraintEnd_toStartOf="@id/date_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_cv" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/transaction_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_half_margin"
        android:layout_marginBottom="@dimen/small_half_margin"
        android:hint="@string/note"
        android:textAlignment="center"
        android:textSize="@dimen/headline6_text_size"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toTopOf="@+id/done_btn"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_amount_tv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/date_picker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/caption_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/transaction_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/transaction_amount_tv"
        tools:text="123213123" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.7"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_half_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/small_half_margin"
        android:backgroundTint="?attr/colorPrimary"
        android:gravity="center"
        android:paddingTop="@dimen/small_margin"
        android:paddingBottom="@dimen/small_margin"
        android:text="@string/done"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_description" />


</androidx.constraintlayout.widget.ConstraintLayout>
