...
            android:background="@color/white"
            tools:src="@drawable/ic_shopping_cart" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/category_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:textSize="@dimen/subtitle_text_size"
            app:layout_constraintStart_toEndOf="@id/category_iv_container"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Groceries" />

        <TextView
            android:id="@+id/account_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_half_margin"
            android:textSize="@dimen/button_text_size"
            app:layout_constraintStart_toEndOf="@id/account_iv_container"
...
