<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.floatingactionbutton.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/medium_margin"
    android:layout_marginBottom="@dimen/medium_margin"
    android:contentDescription="@string/add_transaction"
    android:src="@drawable/ic_baseline_add"
    app:fabSize="normal">

</com.google.android.material.floatingactionbutton.FloatingActionButton>