<resources>
    <string name="app_name">My Personal Wallet</string>
    <string name="transaction">Transaction</string>
    <string name="transactions">Transactions</string>
    <string name="category_icon_desc">Category icon</string>
    <string name="category_with_subcategory">%s (%s)</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="expense">Expense</string>
    <string name="zero_balance">$0.00</string>
    <string name="note">Note…</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="choose_account">Choose Account</string>
    <string name="choose_category">Choose Category</string>
    <string name="category_subtitle_template">(%s)</string>
    <string name="delete">Delete</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="add">Add</string>
    <string name="account_type">Account type</string>
    <string name="trxcategory_type">Transaction category</string>
    <string name="account_title">Account title</string>
    <string name="account_icon">Account icon</string>
    <string name="cancel">Cancel</string>
    <string name="subcategory">Subcategory</string>
    <string name="search_icons">Search icons</string>
    <string name="delete_message">Do you want to delete the transactions</string>
    <string name="settings">Settings</string>
    <string name="choose_color">Choose theme color</string>
    <string name="theme_color">Theme color</string>
    <string name="fill_all_required_category">Fill in all required fields and select an icon</string>
    <string name="fill_all_required_transaction">Fill in all required fields and select Account type and Transaction category</string>
    <string name="notification_reminder_title">Reminder</string>
    <string name="notification_reminder_subtitle">Don\'t forget to write down the expense</string>
    <string name="notification_schedule_title">Schedule notification:\u00a0</string>
    <string name="notification_schedule_pattern">dd.MM.yy \u00B7 HH:mm</string>
    <string name="notification_schedule_error">Schedule notification: Incorrect Date and Time</string>
    <string name="reminder">Reminder</string>
    <string name="set_reminder_time">Set reminder time</string>
    <string name="save_transactions_into_file">Save transactions into file</string>
    <string name="notification_save_title">Save transactions</string>
    <string name="notification_save_subtitle">Saving transactions into file</string>
    <string name="dialog_permission_title">Permission required</string>
    <string name="dialog_permission_message">For saving transactions to file, please give app media access</string>
    <string name="dialog_permission_button_positive">OK</string>
    <string name="storage_permission_denied">Storage Permission Denied</string>
</resources>