...
    <ImageView
        android:id="@+id/cancel_iv"
        android:layout_width="@dimen/image_button_size"
        android:layout_height="@dimen/image_button_size"
        android:src="@drawable/ic_baseline_cross"
        android:layout_marginStart="@dimen/medium_margin"
        app:layout_constraintBottom_toTopOf="@+id/recycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/cancel" />

    <SearchView
        android:id="@+id/search"
        android:layout_width="0dp"
...
